// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//  **** IMPORTANT NOTE ****
//
//  The proto of BT data has to match exactly the g3 proto, including tag
//  number.

// REST API URL from the proto in this file:
// ========================================
//    /bulk/place-obs
//    /bulk/stats
//    /stat/all
//    /stat/set
//    /stat/series
//    /stat/set/within-place
//    /stat/value
//    /v1/stat/set/series
// ========================================

syntax = "proto3";
option go_package = "./proto";
package datacommons;

// StatMetadata contains the source and measurement information for a
// statistical observation.
message StatMetadata {
  string import_name = 1;
  string provenance_url = 2;
  string measurement_method = 3;
  string observation_period = 4;
  string scaling_factor = 5;
  string unit = 6;
}

message PointStat {
  // date in IOS-8601 format
  string date = 1;
  double value = 2;
  // Full metadata of the stat. This is set when the proto is used statalone,
  // ex, in place page cache.
  StatMetadata metadata = 3;
  // Hash of the metadata, this is to be used together with a map from
  // the hash to the full metatdata. This is set in /stat/set/within-place/*
  // APIs.
  uint32 meta_hash = 4;
  // Same as meta_hash, used in V1 API.
  uint32 facet = 5;
}

message PlacePointStat {
  // Keyed by place DCID.
  map<string, PointStat> stat = 1;
  // Hash of the matdata, which applies to all the PointStat in `stat` field.
  uint32 meta_hash = 2;
}

message PlacePointStatAll {
  // A list of PlacePointStat, with each one from one source.
  repeated PlacePointStat stat_list = 1;
}

message SourceSeries {
  map<string, double> val = 1;
  string measurement_method = 3;
  string observation_period = 4;
  string import_name = 5;
  string provenance_domain = 6;
  string scaling_factor = 7;
  string unit = 8;
  bool is_dc_aggregate = 9;
  string provenance_url = 10;
  // Only used for latest date obs collection.
  map<string, string> place_to_latest_date = 11;
  reserved 2;
}

// Represents a time series from a source.
message Series {
  // Map from date to stat value.
  map<string, double> val = 1;
  // Series metadata.
  StatMetadata metadata = 2;
}

message SeriesMap {
  // A wrapper proto for a map of series.
  map<string, Series> data = 1;
}

// Represents observation time series data.
message ObsTimeSeries {
  string place_name = 3;
  string place_dcid = 5; // Only set if the key uses mid.
  repeated SourceSeries source_series = 6;
}

// A collection of observation values for various places with the same parent
// and place type, for given measured property, observation period, stat type,
// observation date, pop type, and an optional list of pop PVs.
message ObsCollection {
  repeated SourceSeries source_cohorts = 5;
  reserved 1, 2, 3, 4;
}

// Wrapper for observation data.
message ChartStore {
  oneof val {
    ObsTimeSeries obs_time_series = 1;
    ObsCollection obs_collection = 2;
  }
}

// TODO(shifucun): deprecate this and use StatVarSeries when migrating
// /stat/all to v1.
message PlaceStat {
  // Key is stat var dcid.
  map<string, ObsTimeSeries> stat_var_data = 3;
}

// This is effectively the same proto as PlaceStat with different field name.
// This is used to match the place page cache data.
message StatVarObsSeries {
  // Key is stat var dcid.
  map<string, ObsTimeSeries> data = 1;
  repeated string categories = 2;
}

// Hold mapping from stat var id to Series struct. This is different from
// StatVarObsSeries that the "Series" is processed time series with metadata
// while "ObsTimeSeries" is the raw series from cache.
message StatVarSeries {
  // Key is stat var dcid.
  map<string, Series> data = 1;
}

// SVOPlace holds basic information about a DC place along with its associated
// StatVarObservations.
//
// NOTE: Equivalent to legacy PopObsPlace.
message SVOPlace {
  string name = 1;
  string type = 2;
  string dcid = 3;
  // All StatVarObservations associated with the place.
  repeated SVOObservation observations = 4;
  string provenance_id = 5;

  // Not persisted in cache.
  message Temp {
    repeated string child_places = 2;
    repeated string mids = 3;
    reserved 1;
  }
  Temp temp = 6;
}

// Stores a StatVarObservation node.
//
// NOTE: Equivalent to legacy PopObsObservation.
message SVOObservation {
  string dcid = 1;
  string observation_date = 2;
  string observation_period = 3;
  string measurement_method = 4;
  string unit = 5;
  string scaling_factor = 6;
  string provenance_id = 7;

  oneof val {
    // Represents value for statType == "measurementResult"
    string str_value = 8;
    // Represents value for statType != "measurementResult"
    double dbl_value = 9;
  }

  // Not persisted in cache.
  message Temp {
    string observation_about = 1;
    string variable_measured = 2;
    string import_name = 3;
  }
  Temp temp = 10;
}

// SVOCollection holds information for multiple SVOPlace instances.
message SVOCollection { repeated SVOPlace places = 1; }

// Request message for GetStats.
message GetStatsRequest {
  // The dcids of the place.
  repeated string place = 1;

  // The dcid of the StatisticalVariable.
  string stats_var = 2;

  // (Optional) The measurement method of the observation. If not specified,
  // stats series with any measurement methods could be returned.
  string measurement_method = 4;

  // (Optional) The unit of the observation. If not specified, stats series with
  // any unit could be returned.
  string unit = 5;

  // (Optional) The observation period of the observation. If not specified,
  // stats series with any observation period could be returned.
  string observation_period = 6;

  // (optional) scaling factor of the observation.
  string scaling_factor = 7;
}

// Response of GetStats
message GetStatsResponse {
  // The JSON payload.
  string payload = 2;
}

// Request for GetStatSetSeries API.
// TODO(shifucun): Deprecate GetStats() once all clients are switched to use
// this API.
// Request message for GetStatSetSeries.
message GetStatSetSeriesRequest {
  // The dcids of the place.
  repeated string places = 1;

  // The dcids of the statistical variables.
  repeated string stat_vars = 2;

  // (Optional) Import name of the desired series.
  // TODO(shifucun): consider add other SVObs properties for filtering.
  string import_name = 3;
}

// Response of GetStatSetSeries
message GetStatSetSeriesResponse {
  // A map from place dcid to series map.
  map<string, SeriesMap> data = 1;
}

// Request for GetStat service.
message GetStatValueRequest {
  // dcid of the place.
  string place = 1;
  // dcid of the stat var.
  string stat_var = 2;
  // (optional) date of the stat. The latest date will be used if unspecified.
  string date = 3;
  // (optional) measurement method of the observation, ex: "CensusACS5yrSurvey".
  string measurement_method = 4;
  // (optional) observation period of the observation, ex: "P1Y".
  string observation_period = 5;
  // (optional) unit of the observation.
  string unit = 6;
  // (optional) scaling factor of the observation.
  string scaling_factor = 7;
}

message GetStatValueResponse { double value = 1; }

// Request for GetStatSeries service.
message GetStatSeriesRequest {
  // dcid of the place.
  string place = 1;
  // dcid of the stat var.
  string stat_var = 2;
  // (optional) measurement method of the observation, ex: "CensusACS5yrSurvey".
  string measurement_method = 3;
  // (optional) observation period of the observation, ex: "P1Y".
  string observation_period = 4;
  // (optional) unit of the observation.
  string unit = 5;
  // (optional) scaling factor of the observation.
  string scaling_factor = 6;
}

// Response for GetStatSeries service.
message GetStatSeriesResponse {
  // A map from ISO date to stat value.
  map<string, double> series = 1;
}

// Request for GetStatAll service.
message GetStatAllRequest {
  // dcids of the place.
  repeated string places = 1;
  // dcids of the stat var.
  repeated string stat_vars = 2;
}

// Response for GetStatAll service.
//
// The response is a two level map, with the first level keyed by place dcid,
// and the second level keyed by the stat var dcid.
// Each leaf object contains multiple source series with <date, value> object
// and observation metadata.
//
// The response is transcoded by esp:
// https://cloud.google.com/endpoints/docs/grpc/grpc-service-config Example
// response after esp transcoding is like below.
// {
//   placeData: {
//     "geoId/01": {
//       statVarData: {
//         "statvar1": {
//           "placeName": "City of Mountain View",
//           "sourceSeries": [
//             {
//               "val": {
//                 "2008": 2116,
//                 "2009": 2155,
//                 "2010": 1633,
//                 "2011": 1509,
//                 "2012": 1581,
//                 "2013": 1867,
//                 "2014": 1770,
//                 "2015": 2201,
//                 "2016": 1913,
//                 "2017": 2138
//               },
//               "observationPeriod": "P1Y",
//               "importName": "FBIGovCrime",
//               "provenanceDomain": "fbi.gov"
//             }
//           ]
//         },
//       }
//     },
//     "geoId/02": {
//       statVarData: {
//         "statvar3": {...},
//       }
//     }
//   }
// }
message GetStatAllResponse { map<string, PlaceStat> place_data = 1; }

message GetStatSetWithinPlaceRequest {
  // Parent place dcid.
  string parent_place = 1;
  // Child place type.
  string child_type = 2;
  // Dcid of the stat var.
  repeated string stat_vars = 3;
  // [Optional] Date for the stat in ISO format.
  // If the date is not given, then the latest observation for each place is
  // returned, where they could be from different sources.
  string date = 4;
}

message GetStatSetSeriesWithinPlaceRequest {
  // Parent place dcid.
  string parent_place = 1;
  // Child place type.
  string child_type = 2;
  // Stat Var dcids.
  repeated string stat_vars = 3;
}

message GetStatSetRequest {
  // A list of place DCIDs.
  repeated string places = 1;
  // A list of statistical variable DCIDs.
  repeated string stat_vars = 2;
  // (Optional) date of the stat.
  // If not sepcified, the latest stat of a chosen source will be returned.
  string date = 3;
}

message GetStatSetResponse {
  // Keyed by statVar.
  map<string, PlacePointStat> data = 1;
  // Keyed by metadata hash.
  map<uint32, StatMetadata> metadata = 2;
}

message GetStatSetAllResponse {
  // Keyed by statVar.
  map<string, PlacePointStatAll> data = 1;
  // Keyed by metadata hash.
  map<uint32, StatMetadata> metadata = 2;
}

message StatDate {
  // Map from date to the number of places.
  map<string, double> date_place_count = 1;
  StatMetadata metadata = 2;
}

message StatDateList {
  repeated StatDate stat_date = 1;
}

message GetStatDateWithinPlaceRequest {
  string ancestor_place = 1;
  string child_place_type = 2;
  repeated string stat_vars = 3;
}

message GetStatDateWithinPlaceResponse {
  // Keyed by stat var.
  map<string, StatDateList> data = 1;
}
